--- a/lihat.html
+++ b/lihat.html
@@ -3,29 +3,86 @@
 <head>
   <meta charset="utf-8">
   <title>Request Libur & Cuti</title>
+
   <style>
-    body { font-family: Arial; padding: 20px; background:#f4f6f8; }
-    a { color:#1565c0; font-weight:bold; cursor:pointer; }
-    table { border-collapse: collapse; width:100%; margin-top:15px; background:white; }
-    th, td { border:1px solid #bbb; padding:6px; font-size:13px; vertical-align:top; }
-    th { background:#1976d2; color:white; position:sticky; top:0; }
-    tr.bdl { background:#f8cfc6; }
-    tr.smg { background:#b7cef5; }
-    tr.yog { background:#ffe082; }
-    #wrap { display:none; max-height:75vh; overflow:auto; box-shadow:0 2px 8px rgba(0,0,0,.2); }
+    body {
+      font-family: Arial;
+      padding: 20px;
+      background: #f4f6f8;
+    }
+
+    h2 {
+      margin-bottom: 10px;
+    }
+
+    /* ===== BUTTON LIHAT REQUEST ===== */
+    .btn {
+      background: linear-gradient(135deg, #16a34a, #22c55e);
+      color: white;
+      border: none;
+      padding: 10px 22px;
+      border-radius: 999px;
+      font-weight: bold;
+      font-size: 14px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(34,197,94,.4);
+      transition: all .2s ease;
+    }
+
+    .btn:hover {
+      background: linear-gradient(135deg, #15803d, #16a34a);
+      transform: translateY(-1px);
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 15px;
+      background: white;
+    }
+
+    th, td {
+      border: 1px solid #bbb;
+      padding: 6px;
+      font-size: 13px;
+      vertical-align: top;
+      white-space: nowrap;
+    }
+
+    th {
+      background: #1976d2;
+      color: white;
+      position: sticky;
+      top: 0;
+    }
+
+    tr.bdl { background: #f8cfc6; }
+    tr.smg { background: #b7cef5; }
+    tr.yog { background: #ffe082; }
+
+    #wrap {
+      display: none;
+      max-height: 75vh;
+      overflow: auto;
+      box-shadow: 0 2px 8px rgba(0,0,0,.2);
+      background: white;
+    }
   </style>
 </head>
+
 <body>
 
 <h2>📊 Data Request Libur & Cuti</h2>
-<a onclick="loadData()">▶ Lihat Request</a>
+
+<button class="btn" onclick="loadData()">📂 Lihat Request</button>
 
 <div id="wrap">
   <table id="tbl"></table>
 </div>
 
 <script>
-const GAS_URL = "https://script.google.com/macros/s/AKfycbzR8nCWg3vWMLd9ZWbvOTDR9bwdZ8xLpr7dQAfLyzZka32Qf9gsswpKQgLRUPFl8yA93Q/exec?api=req";
+const GAS_URL =
+  "https://script.google.com/macros/s/AKfycbzR8nCWg3vWMLd9ZWbvOTDR9bwdZ8xLpr7dQAfLyzZka32Qf9gsswpKQgLRUPFl8yA93Q/exec?api=req";
 
 function loadData() {
   fetch(GAS_URL)
@@ -47,18 +104,20 @@ function render(data) {
     const tr = document.createElement("tr");
 
     if (i === 0) {
-      row.forEach(c => {
+      // HEADER → SKIP KOLOM A (Timestamp)
+      row.slice(1).forEach(c => {
         const th = document.createElement("th");
         th.textContent = c;
         tr.appendChild(th);
       });
     } else {
-      const group = String(row[3] || "").toUpperCase(); // kolom Group
+      const group = String(row[3] || "").toUpperCase(); // kolom Group (asli)
       if (group === "BDL-PLG-KAL") tr.className = "bdl";
       else if (group === "SMG-CRB") tr.className = "smg";
       else if (group === "YOG") tr.className = "yog";
 
-      row.forEach(c => {
+      // DATA → SKIP KOLOM A (Timestamp)
+      row.slice(1).forEach(c => {
         const td = document.createElement("td");
         td.textContent = c;
         tr.appendChild(td);
@@ -72,4 +131,3 @@ function render(data) {
 
 </body>
 </html>
-
