--- a/lihat.html
+++ b/lihat.html
@@ -72,9 +72,9 @@
 
 <body>
 
-<h2>📊 Data Request Libur & Cuti</h2>
+<h2>DATA REQUEST CUTI - LIBUR JANUARI 2026</h2>
 
-<button class="btn" onclick="loadData()">📂 Lihat Request</button>
+<button class="btn" onclick="loadData()">📂LIHAT DATA</button>
 
 <div id="wrap">
   <table id="tbl"></table>
@@ -131,3 +131,4 @@ function render(data) {
 
 </body>
 </html>
+
