--- a/lihat.html
+++ b/lihat.html
@@ -7,12 +7,33 @@
   <style>
     body {
       font-family: Arial;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
       background: #f4f6f8;
     }
 
-    h2 {
-      margin-bottom: 10px;
+    /* ================= HEADER ================= */
+    .header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: linear-gradient(135deg, #1976d2, #42a5f5);
+      color: white;
+      padding: 22px 20px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,.2);
+    }
+
+    .header h2 {
+      margin: 0;
+      font-size: 1.6rem;
+      font-weight: 900;
+      letter-spacing: .5px;
+    }
+
+    /* ================= CONTENT ================= */
+    .content {
+      padding: 20px;
     }
 
     /* ===== BUTTON LIHAT REQUEST ===== */
@@ -20,13 +41,14 @@
       background: linear-gradient(135deg, #16a34a, #22c55e);
       color: white;
       border: none;
-      padding: 10px 22px;
+      padding: 10px 26px;
       border-radius: 999px;
       font-weight: bold;
       font-size: 14px;
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(34,197,94,.4);
       transition: all .2s ease;
+      margin-bottom: 10px;
     }
 
     .btn:hover {
@@ -53,7 +75,7 @@
       background: #1976d2;
       color: white;
       position: sticky;
-      top: 0;
+      top: 86px; /* tinggi header */
     }
 
     tr.bdl { background: #f8cfc6; }
@@ -72,12 +94,19 @@
 
 <body>
 
-<h2 id="pageTitle"></h2>
+<!-- ================= HEADER ================= -->
+<div class="header">
+  <h2 id="pageTitle"></h2>
+</div>
 
-<button class="btn" onclick="loadData()">📂 LIHAT DATA</button>
+<div class="content">
 
-<div id="wrap">
-  <table id="tbl"></table>
+  <button class="btn" onclick="loadData()">📂 LIHAT DATA</button>
+
+  <div id="wrap">
+    <table id="tbl"></table>
+  </div>
+
 </div>
 
 <script>
