--- a/lihat.html
+++ b/lihat.html
@@ -7,26 +7,46 @@
   <style>
     body {
       font-family: Arial;
-      padding: 20px;
+      margin: 0;
       background: #f4f6f8;
     }
 
-    h2 {
-      margin-bottom: 10px;
+    /* ===== HEADER HALAMAN (FREEZE AMAN) ===== */
+    .header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: linear-gradient(135deg, #1976d2, #42a5f5);
+      color: white;
+      padding: 18px 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,.2);
     }
 
-    /* ===== BUTTON LIHAT REQUEST ===== */
+    .header h2 {
+      margin: 0;
+      font-size: 1.6rem;
+      font-weight: 900;
+      letter-spacing: .5px;
+    }
+
+    .content {
+      padding: 20px;
+    }
+
+    /* ===== BUTTON ===== */
     .btn {
       background: linear-gradient(135deg, #16a34a, #22c55e);
       color: white;
       border: none;
-      padding: 10px 22px;
+      padding: 10px 26px;
       border-radius: 999px;
       font-weight: bold;
       font-size: 14px;
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(34,197,94,.4);
-      transition: all .2s ease;
+      transition: .2s;
+      margin-bottom: 10px;
     }
 
     .btn:hover {
@@ -34,6 +54,7 @@
       transform: translateY(-1px);
     }
 
+    /* ===== TABLE ===== */
     table {
       border-collapse: collapse;
       width: 100%;
@@ -52,36 +73,44 @@
     th {
       background: #1976d2;
       color: white;
-      position: sticky;
-      top: 0;
+      /* ❌ TIDAK STICKY — INI KUNCI */
     }
 
     tr.bdl { background: #f8cfc6; }
     tr.smg { background: #b7cef5; }
     tr.yog { background: #ffe082; }
 
+    /* ===== WRAP SCROLL ===== */
     #wrap {
       display: none;
       max-height: 75vh;
       overflow: auto;
       box-shadow: 0 2px 8px rgba(0,0,0,.2);
       background: white;
+      margin-top: 10px;
     }
   </style>
 </head>
 
 <body>
 
-<h2 id="pageTitle"></h2>
+<!-- ===== HEADER ===== -->
+<div class="header">
+  <h2 id="pageTitle"></h2>
+</div>
 
-<button class="btn" onclick="loadData()">📂 LIHAT DATA</button>
+<div class="content">
 
-<div id="wrap">
-  <table id="tbl"></table>
+  <button class="btn" onclick="loadData()">📂 LIHAT DATA</button>
+
+  <div id="wrap">
+    <table id="tbl"></table>
+  </div>
+
 </div>
 
 <script>
-/* ===== JUDUL OTOMATIS: BULAN BERJALAN + 1 ===== */
+/* ===== JUDUL OTOMATIS BULAN +1 ===== */
 (function setAutoTitle() {
   const bulan = [
     "JANUARI","FEBRUARI","MARET","APRIL","MEI","JUNI",
@@ -95,7 +124,6 @@
     `DATA REQUEST CUTI - LIBUR ${bulan[target.getMonth()]} ${target.getFullYear()}`;
 })();
 
-/* ===== API ===== */
 const GAS_URL =
   "https://script.google.com/macros/s/AKfycbzR8nCWg3vWMLd9ZWbvOTDR9bwdZ8xLpr7dQAfLyzZka32Qf9gsswpKQgLRUPFl8yA93Q/exec?api=req";
 
@@ -103,10 +131,7 @@ function loadData() {
   fetch(GAS_URL)
     .then(res => res.json())
     .then(data => render(data))
-    .catch(err => {
-      console.error(err);
-      alert("Gagal load data");
-    });
+    .catch(() => alert("Gagal load data"));
 }
 
 function render(data) {
@@ -119,7 +144,6 @@ function render(data) {
     const tr = document.createElement("tr");
 
     if (i === 0) {
-      // HEADER → SKIP KOLOM A (Timestamp)
       row.slice(1).forEach(c => {
         const th = document.createElement("th");
         th.textContent = c;
@@ -131,7 +155,6 @@ function render(data) {
       else if (group === "SMG-CRB") tr.className = "smg";
       else if (group === "YOG") tr.className = "yog";
 
-      // DATA → SKIP KOLOM A (Timestamp)
       row.slice(1).forEach(c => {
         const td = document.createElement("td");
         td.textContent = c;
